fix settings wrapping
close #874

--- a/css/wfrp4e.css
+++ b/css/wfrp4e.css
@@ -1979,6 +1979,9 @@
       border-top: none;
       box-shadow: 0px 0px 20px inset black;
     }
+    #sidebar #settings ul li {
+      margin: 1px 0px;
+  }
   #sidebar #settings button {
     margin: 4px 12px;
     padding: 3px 0px;
